--- a/custom_nginx.conf
+++ b/custom_nginx.conf
@@ -14,6 +14,10 @@ http {
 
     server {
         listen 8080;
+        listen 443 ssl;
+
+        ssl_certificate /etc/nginx/tls/certificate.crt;
+        ssl_certificate_key /etc/nginx/tls/chave-privada.key;
         server_name localhost;
 
         location / {
