--- a/helm/templates/configmap-index.yaml
+++ b/helm/templates/configmap-index.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-configmap
+  name: {{ .Release.Name }}-conf-configmap
   namespace: {{ .Values.namespace }}
   labels:
     desafio: jackexperts
