--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -44,6 +44,7 @@ spec:
           configMap:
             name: {{ .Release.Name }}-conf-configmap
         - name: nginx-tls
+          secretName: {{ .Release.Name }}-secret
           secret:
             - key: tls.crt
               path: certificado.crt
