--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -9,7 +9,13 @@ spec:
   replicas: {{ .Values.replicasCount }}
   selector:
     matchLabels:
-      app: {{ .Release.Name }} 
+      app: {{ .Release.Name }}
+  strategy:
+  type: {{ .Values.strategy.type }}
+  rollingUpdate:
+    maxSurge: "{{ .Values.strategy.rollingUpdate.maxSurge }}"
+    maxUnavailable: "{{ .Values.strategy.rollingUpdate.maxUnavailable }}"
+
   template:
     metadata:
       labels:
