--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -51,7 +51,7 @@ spec:
             name: {{ .Release.Name }}-conf-configmap
         - name: nginx-tls
           secretName: {{ .Release.Name }}-secret
-          secret:
+          items:
             - key: tls.crt
               path: certificado.crt
             - key: tls.key
