adding tls secrets

--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -8,9 +8,11 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-  - port: {{ .Values.service.port }}
+  - name: http
+    port: {{ .Values.service.port }}
     targetPort: 8080
-  - port: 443
+  - name: https
+    port: 443
     targetPort: 4443
   selector:
     app: {{ .Release.Name }}
