--- a/helm/templates/configmap-conf.yaml
+++ b/helm/templates/configmap-conf.yaml
@@ -25,8 +25,8 @@ data:
             listen 8080;
             listen 443 ssl;
 
-            ssl_certificate /etc/nginx/tls/certificate.crt;
-            ssl_certificate_key /etc/nginx/tls/chave-privada.key;
+            ssl_certificate /etc/nginx/tls/tls.crt;
+            ssl_certificate_key /etc/nginx/tls/tls.key;
             server_name localhost;
 
             location / {
