--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     desafio: jackexperts
   annotations: 
+    cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   tls:
